crates/keron-lang/tests/corpus/errors/check/union_variant_typo_suggests.keron
# A near-miss variant gets a nearest-name suggestion.
val current: OsType = os_type()

val is_mac: Boolean = current == "MacOS"
